--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Eleventy Tailwind Starter</title>
+  <title>Lush Mouthfeel</title>
   <meta name="description" content="">
   <meta name="author" content="Matthew Tole">
   <meta name="viewport" content="width=device-width, initial-scale=1">
