--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,9 +7,10 @@
   <meta name="description" content="">
   <meta name="author" content="Matthew Tole">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body class="h-screen flex justify-center items-center bg-blue-100">
-  {{content | safe}}  
+<body class="h-screen flex justify-center items-center">
+  {{content | safe}}
 </body>
 </html>
