Begin work on random wine phrase

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -12,5 +12,7 @@
 </head>
 <body class="h-screen flex justify-center items-center">
   {{content | safe}}
+  <script src="/static/words.js"></script>
+  <script src="/static/index.js"></script>
 </body>
 </html>
