:heavy_plus_sign: Use epures to improve text

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,11 +7,12 @@
   <meta name="description" content="">
   <meta name="author" content="Matthew Tole">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Charmonman:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="h-screen flex justify-center items-center">
   {{content | safe}}
+  <script src="/static/epures.min.js"></script>
   <script src="/static/words.js"></script>
   <script src="/static/index.js"></script>
 </body>
